examples/errors/import_not_found_error.flx
// Triggers E032 (IMPORT NOT FOUND)
import Missing.Module
Missing.Module.value();
